--- a/tiny-editor/app/views/docs/get.html.erb
+++ b/tiny-editor/app/views/docs/get.html.erb
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <a href="/docs/all">Home</a>
+    <a href="/">Home</a>
     
     <div>
         <form action="/docs/<%= @doc.id %>/edit" method="get">
