--- a/tiny-editor/app/views/docs/edit.html.erb
+++ b/tiny-editor/app/views/docs/edit.html.erb
@@ -10,14 +10,15 @@
     </style>
 </head>
 <body>
+    <a href="/docs/<%=@doc.id%>">Back</a>
     <% if @doc %>
     <form action="/docs/<%= @doc.id %>/save" method="post">
     <% else %>
     <form action="/docs/new">
     <% end %>
-        <input type="text" name="doc_name" value="<%= @doc.name %>" size="77"/>
-        <br>
-        <textarea name="doc_data" cols="80" rows="50"><%= @doc.data %></textarea>
-        <input type="submit"/>
+<input type="text" name="doc_name" value="<%= @doc.name %>" size="77"/>
+<br>
+<textarea name="doc_data" cols="80" rows="45"><%= @doc.data %></textarea>
+<input type="submit"/>
     </form>
 </body>
