--- a/tiny-editor/app/views/docs/get.html.erb
+++ b/tiny-editor/app/views/docs/get.html.erb
@@ -1,24 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <style>
-        body {
-            font-family: 'Courier New', monospace;
-            white-space: pre;
-            display: grid;
-        }
-        .left {
-            float: left;
-        }
-    </style>
-</head>
-<body>
-    <a href="/">Home</a>
-    
+<div class="header">
+    <div>
+        <form action="/" method="get"><input type="submit" value="Home" class="link-button"/></form>
+    </div>
+    &nbsp;
     <div>
         <form action="/docs/<%= @doc.id %>/edit" method="get">
-            <b class="left"><%= @doc.name %></b> <input type="submit" value="Edit"/>
+            <input type="submit" value="Edit" class="link-button"/>
         </form>
     </div>
-    <div><%= @doc.data %></div>
-</body>
+    &nbsp;
+    <div>
+        <form method="post" action="/docs/<%= @doc.id %>/delete" onclick="return confirm('Are you sure?')">
+            <input type="submit" class="link-button" value="Delete"/>
+        </form>
+    </div>
+</div>
+<br>
+
+<div>
+    <b class="left"><%= @doc.name %></b>
+</div>
+<br>
+<div class="mono"><%= @doc.data %></div>
