--- a/tiny-editor/app/views/docs/new.html.erb
+++ b/tiny-editor/app/views/docs/new.html.erb
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <style>
-        body {
-          font-family: 'Courier New', monospace;
-          white-space: pre;
-          display: grid;
-        }
-    </style>
-</head>
-<body>
-    <a href="/">Home</a>
-    <form action="/docs/save" method="post">
-<input type="text" name="doc_name" value="" size="77"/>
+<div>
+    <form action="/" method="get"><input type="submit" value="Home" class="link-button"/></form>
+</div>
 <br>
-<textarea name="doc_data" cols="80" rows="45"></textarea>
-<input type="submit"/>
-    </form>
-</body>
+
+<form action="/docs/save" method="post">
+    <input type="text" name="doc_name" size="77"/>
+    <br><br>
+
+    <div class="mono"><textarea name="doc_data" cols="80" rows="40"></textarea></div>
+    <input type="submit"/>
+</form>
