Registration [alpha][bloaty]

--- a/tiny-editor/app/views/docs/get.html.erb
+++ b/tiny-editor/app/views/docs/get.html.erb
@@ -1,6 +1,6 @@
 <div class="header">
     <div>
-        <form action="/" method="get"><input type="submit" value="Home" class="link-button"/></form>
+        <form action="/docs/all" method="get"><input type="submit" value="Home" class="link-button"/></form>
     </div>
     &nbsp;
     <div>
