--- a/tiny-editor/app/views/docs/get.html.erb
+++ b/tiny-editor/app/views/docs/get.html.erb
@@ -1,6 +1,6 @@
 <div class="header">
     <div>
-        <form action="/docs/all" method="get"><input type="submit" value="Home" class="link-button"/></form>
+        <form action="/home" method="get"><input type="submit" value="Home" class="link-button"/></form>
     </div>
     &nbsp;
     <div>
@@ -17,7 +17,7 @@
 </div>
 <br>
 
-<div>
+<div class="doc-header">
     <b class="left"><%= @doc.name %></b>
 </div>
 <br>
