--- a/tiny-editor/app/assets/stylesheets/application.css
+++ b/tiny-editor/app/assets/stylesheets/application.css
@@ -40,3 +40,11 @@ body {
     font-size: 1.05em;
     font-family: 'Courier New', monospace;
 }
+
+.folder-header {
+    font-size: 1.5em;
+}
+
+.doc-header {
+    font-size: 1.5em;
+}
