--- a/tiny-editor/app/views/docs/new.html.erb
+++ b/tiny-editor/app/views/docs/new.html.erb
@@ -1,5 +1,5 @@
 <div>
-    <form action="/docs/all" method="get"><input type="submit" value="Home" class="link-button"/></form>
+    <form action="/home" method="get"><input type="submit" value="Home" class="link-button"/></form>
 </div>
 <br>
 
