--- a/tiny-editor/app/views/docs/new.html.erb
+++ b/tiny-editor/app/views/docs/new.html.erb
@@ -8,5 +8,6 @@
     <br><br>
 
     <div class="mono"><textarea name="doc_data" cols="80" rows="40"></textarea></div>
+    <input type="hidden" name="folder_id" value="<%= @folder_id %>">
     <input type="submit"/>
 </form>
