--- a/tiny-editor/app/views/folders/get.html.erb
+++ b/tiny-editor/app/views/folders/get.html.erb
@@ -5,12 +5,14 @@
     &nbsp;
     <div>
         <form action="/docs/new">
+            <input type="hidden" name="folder_id" value="<%= @folder.id %>">
             <input type="submit" value="New document" class="link-button"/>
         </form>
     </div>
     &nbsp;
     <div>
         <form action="/folders/new">
+            <input type="hidden" name="parent_folder_id" value="<%= @folder.id %>">
             <input type="submit" value="New folder" class="link-button"/>
         </form>
     </div>
@@ -23,7 +25,7 @@
         </div>
         &nbsp;
         <div>
-            <form method="post" action="/folders/<%= @folder.id %>/delete" onclick="return confirm('Are you sure?')">
+            <form method="post" action="/folders/<%= @folder.id %>/destroy" onclick="return confirm('Are you sure?')">
                 <input type="submit" class="link-button" value="Delete"/>
             </form>
         </div>
